# pampu

./: .gitignore  README.md  pyproject.toml
pampu/: __init__.py  __main__.py  cli.py  client.py
tests/: test_cli.py
